# stockura.jp

./: .coveragerc  .dockerignore  .env.docker  .env.example  .env.test  .env.test.example  .gitignore  .test_credentials.json  CELERY_DEBUG.md  CLAUDE.md  DOCKER_CELERY_DEBUG.md  Dockerfile  Dockerfile.celery  Dockerfile.dev  Dockerfile.distroless  Dockerfile.test  MANUAL_TEST.md  Makefile  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mcp-config.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  test-playwright-mcp.js  test_celery_tasks.py  test_jquants_sync.py  test_schedule_click.js  test_sync.py
.claude/: j-quants-listed-info-api.md
.github/: README.md
alembic/: env.py
app/: config.py  main.py
docs/: ALEMBIC_MIGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  CELERY_BEAT_MANUAL_TEST.md  CELERY_BEAT_SETUP.md  CLEAN_ARCHITECTURE_DIAGRAM.md  CODE_QUALITY_REVIEW.md  DIRECTORY_STRUCTURE_IMPROVEMENT_PROPOSAL.md  DOCKER_PRODUCTION.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  DOCKER_TESTING.md  DOCKER_TROUBLESHOOTING.md  FETCH_LISTED_INFO_MANUAL_TEST.md  FILE_STRUCTURE.md  INFRASTRUCTURE_CLEAN_ARCHITECTURE_IMPROVEMENTS.md  MAKEFILE_COMMANDS.md  MANUAL_TEST.md  READING_GUIDE.md  README.md  SCHEDULED_LISTED_INFO_API_TEST.md  SECURITY_AUDIT.md  TODO.md  api_documentation.md  application_architecture.md  architecture_flow.md  auth-verification.md  celery-async-sqlalchemy-fix.md  celery-task-update-example.md  celery_beat_schedule_issue.md  celery_rate_limiting.md  daily_quotes_implementation_design.md  daily_quotes_improvements_plan.md  daily_quotes_pagination_fix_plan.md  daily_quotes_parameter_display_implementation.md  daily_quotes_period_mode_implementation.md  daily_quotes_schedule_implementation.md  data_source_implementation.md  database_schema_design.md  development_guide.md  (+35 more)
scripts/: check_docker_env.sh  check_services.py  db_migrate.py  debug_celery_schedules.py  debug_trades_spec_api.py  diagnose_redis_sync_docker.py  docker_redis_sync_test_results.json  fetch_listed_info.py  list_celery_tasks.py  manage_listed_info_schedule.py  monitor_redis_events.py  monitor_redis_events_docker.sh  redis_sync_diagnosis.json  reset_alembic_version.py  test_announcement.py  test_api_listed_info.py  test_api_listed_info_auto.py  (+18 more)
(+641 files in other folders)
